k8-configs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: botnet-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: botnet-app
  template:
    metadata:
      labels:
        app: botnet-app
    spec:
      containers:
        - name: botnet-app-container
          image: namespaxe/botnet-group:1.0.0
          resources:
            requests:
              memory: "50Mi"
              cpu: "10m"
            limits:
              memory: "100Mi"
              cpu: "10m"
