k8-configs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: botnet-app-service
spec:
  selector:
    app: botnet-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
